# Installer

./: .gitignore  CNAME  DHIZUKU_TROUBLESHOOT.md  LICENSE  README.md  build.gradle.kts  gradle.properties  index.html  settings.gradle.kts
.github/workflows/: android-ci.yml  android.yml  check.yml  pre-release-build.yml  release-build.yml
app/: .gitignore  CMakeLists.txt  build.gradle.kts  proguard-rules.pro
app-debug/: .gitignore  16KB_PAGE_SIZE_SUPPORT.md  NATIVE_LIBRARIES.md  README.md  SHELL_TERMINAL_V2.md  SHELL_TTY_FIX.md  SHELL_V2.1_PERSISTENT_SESSION.md  SHELL_V2.2_AUTO_SCROLL_KEYBOARD.md  SHELL_V2.3_FIXES.md  SHELL_WORKING_DIR_FIX.md  build.gradle.kts
app-debug/src/main/: AndroidManifest.xml
app-debug/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app-debug/src/main/res/layout/: activity_home.xml  dialog_install_progress.xml  fragment_home.xml  fragment_installer.xml  fragment_logs.xml  fragment_notifications.xml  fragment_shell.xml
app-debug/src/main/res/navigation/: mobile_navigation.xml
app-debug/src/main/res/values/: strings.xml  themes.xml
app-debug/src/main/res/values-night/: themes.xml
app-old/: build.gradle.kts
app-old/src/main/: AndroidManifest.xml
app-old/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app-old/src/main/res/drawable/: butterfly.xml  ic_launcher_background.xml  ic_launcher_roegeround.xml  ic_notifications_black_24dp.xml
app-old/src/main/res/layout/: activity_home.xml  dialog_install_progress.xml  fragment_home.xml
app-old/src/main/res/values/: themes.xml
app-old/src/main/res/values-v23/: themes.xml
app-old/src/main/res/xml/: file_paths.xml
app/debug/: output-metadata.json
app/doc/: CPP_NATIVE_LIBRARY.md  NATIVE_QUICKSTART.md  SHARE_INSTALL_TEST.md  SHELL_IMPROVEMENTS.md  SHELL_IMPROVEMENTS_COMPLETE.md  SHELL_TERMINAL.md  SHELL_V3_MATERIAL_YOU_NATIVE.md  修复说明.md  原生库测试-快速指南.md  原生库集成完成说明.md  如何使用原生库测试.md  构建警告说明.md
app/src/debug/: AndroidManifest.xml
app/src/debug/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/debug/res/values-ja-rJP/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/aidl/android/content/: IIntentReceiver.aidl  (+1 more)
app/src/main/assets/: butterfly.txt
app/src/main/cpp/: CMakeLists.txt  README.md  crash_handler.cpp  native-lib.cpp  termux_bridge.c
app/src/main/res/anim/: fade_in.xml  fade_out.xml  slide_in_left.xml  slide_in_right.xml  slide_out_left.xml  slide_out_right.xml
app/src/main/res/color/: button_install_tint.xml  button_primary_tint.xml  button_secondary_tint.xml  switch_thumb_color.xml  switch_track_color.xml
app/src/main/res/drawable/: butterfly.xml  button_about_selector.xml  button_danger_selector.xml  button_green_background.xml  button_install_selector.xml  button_pink_selector.xml  button_primary_selector.xml  button_secondary_selector.xml  button_success_selector.xml  color_preview_circle.xml  ic_arrow_down.xml  ic_arrow_right.xml  ic_butterfly.xml  ic_check_24dp.xml  ic_dhizuku.xml  ic_icon_background.xml  ic_icon_roegeround.xml  ic_language.xml  ic_language_24dp.xml  ic_launcher_roegeround.xml  ic_lock.xml  ic_notifications_black_24dp.xml  ic_notifications_hollow.xml  ic_notifications_solid.xml  ic_package.xml  ic_package_24dp.xml  ic_panel_hollow.xml  ic_panel_solid.xml  ic_settings.xml  ic_shell_24dp.xml  ic_shell_bookmark.xml  ic_shell_history.xml  ic_shell_save.xml  ic_shell_search.xml  ic_terminal.xml  ic_test.xml  ic_translate.xml  ic_version.xml  ic_warning.xml  ripple_effect.xml  (+5 more)
app/src/main/res/layout/: activity_easter_egg_webview.xml  activity_home.xml  activity_install.xml  activity_installer.xml  activity_main.xml  activity_me.xml  dialog_install.xml  dialog_language.xml  dialog_privilege.xml  dialog_theme.xml  fragment_home.xml  fragment_installer.xml  fragment_logs.xml  fragment_notifications.xml  fragment_privilege_settings.xml  fragment_settings.xml  fragment_shell.xml  item_log_entry.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/navigation/: mobile_navigation.xml  nav_graph.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-en-rUS/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ja-rJP/: strings.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/values-night-v29/: themes.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-ru-rRU/: strings.xml
app/src/main/res/values-v29/: themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rHK/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: file_paths.xml
doc/: BUTTON_COLOR_AND_WRAPPER_IMPROVEMENT.md  BUTTON_FUNCTION_FIX_REPORT.md  BUTTON_WRAPPER_COMPLETION_REPORT.md  BUTTON_WRAPPER_IMPROVEMENT.md  COMPILATION_WARNINGS_FIX.md  COMPOSE_MIGRATION_COMPLETE.md  DEMO_MIGRATION_TO_COMPOSE.md  ICON_REPLACEMENT_REPORT.md  INSTALL_DIALOG_INDEPENDENT.md  INSTALL_DIALOG_VERSIONCODE_COMPARISON.md  MANIFEST_FIX_REPORT.md  SETTINGS_SCREEN_COMPLETE_IMPLEMENTATION.md  SETTINGS_SCREEN_FIX_REPORT.md  SETTINGS_SCREEN_FUNCTION_PLAN.md  UI_BUTTON_AND_FUNCTION_FIX.md  changelog.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hidden-api/: build.gradle.kts
hidden-api/demo/: build.gradle.kts
hidden-api/demo/src/main/: AndroidManifest.xml
output/: README
(+181 files in other folders)
